# UCRBenchmarkTemplate

./: .gitignore  LICENSE  Makefile  NoProp_optuna.ipynb  NoProp_optuna.py  README.md  dvc.yaml  optuna_results.csv  params.yaml  pyproject.toml  requirements-lock.txt  requirements.txt
.ipynb_checkpoints/: dvc-checkpoint.yaml  params-checkpoint.yaml  requirements-checkpoint.txt
data/: .gitignore
docs/: mkdocs.yml
docs/docs/: index.md
optuna testing/: DRTP_optuna.ipynb  optuna_results_drtp.csv  optuna_results_noprop.csv
optuna_testing/: NoProp_optuna.ipynb  optuna_results_noprop.csv
ucr_benchmark_template/: __init__.py  analyze_results.py  dataset.py  features.py  save_results.py
ucr_benchmark_template/.ipynb_checkpoints/: __main__-checkpoint.py  config-checkpoint.py  dataset-checkpoint.py  plots-checkpoint.py
ucr_benchmark_template/modeling/: train.py  train_drtp.py  train_drtp_hand.py  train_inceptiontime.py  train_noprop.py
ucr_benchmark_template/modeling/.ipynb_checkpoints/: predict-checkpoint.py  train-checkpoint.py  train_kan-checkpoint.py
ucr_benchmark_template/preprocessing/: preprocess.py
ucr_benchmark_template/preprocessing/preprocessors/: __init__.py  drtp.py  inceptiontime.py  mlp.py
ucr_benchmark_template/preprocessing/preprocessors/.ipynb_checkpoints/: kan-checkpoint.py
ucr_benchmark_template/preprocessing/utils/.ipynb_checkpoints/: fix_labels-checkpoint.py
