[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ucr_benchmark_template"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Irina Barasin" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
#requires-python = "~=3.10.0"
requires-python = ">=3.10,<3.12"

[tool.ruff]
line-length = 99
src = ["ucr_benchmark_template"]
include = ["pyproject.toml", "ucr_benchmark_template/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ucr_benchmark_template"]
force-sort-within-sections = true

